# Multi-Modal-Summarization

./: .gitignore  .pre-commit-config.yaml  0937.py  README.md  pyproject.toml  quick_start.py  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: streamlit_app.py
scripts/: evaluate.py  inference.py  train.py
src/data/: __init__.py
src/eval/: __init__.py
src/utils/: __init__.py
src/viz/: __init__.py
tests/: test_components.py
